--- a/W3/homwork.ipynb
+++ b/W3/homwork.ipynb
@@ -126,6 +126,137 @@
     "    # Call the pipeline\n",
     "    mainflow()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from prefect_gcp.cloud_storage import GcsBucket\n",
+    "import pandas as pd  \n",
+    "\n",
+    "def writegcs(file_list):\n",
+    "    block = GcsBucket.load(\"gcs-dataengineer\")\n",
+    "    to_name = file_list[file_list.rfind('\\\\')+1:]\n",
+    "    block.upload_from_path(from_path=file_list,to_path=to_name)\n",
+    "\n",
+    "    return None\n",
+    "\n",
+    "\n",
+    "def loadfile(year,month,color):\n",
+    "    url =f'https://github.com/DataTalksClub/nyc-tlc-data/releases/download/{color}/{color}_tripdata_{year}-{month:02}.csv.gz'\n",
+    "    print(url)\n",
+    "    file = pd.read_csv(url)\n",
+    "    return file\n",
+    "\n",
+    "\n",
+    "def mainflow(year=2019,color='yellow'):\n",
+    "    month = [i for i in range(1,2)]\n",
+    "    file_all = pd.DataFrame()\n",
+    "    for i in month:\n",
+    "        file =loadfile(year,i,color)\n",
+    "        file_all = file_all.append(file)\n",
+    "    path = f'data\\\\fhv_tripdata_{year}.csv.gz'\n",
+    "    pathpa = f'data\\\\fhv_tripdata_{year}.parquet'\n",
+    "    file_all.to_csv(path,index=False)\n",
+    "    file_all.to_parquet(pathpa,index=False)\n",
+    "    writegcs(pathpa)\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mainflow(year=2019)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import glob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = r'D:\\Avalon_Pratice_Code\\ML_Project\\Dataclub\\MLzoomcamp_dataengineer2023\\Homework\\W3\\data\\New folder\\New folder\\*.gz'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_list = glob.glob(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D:\\Avalon_Pratice_Code\\ML_Project\\Dataclub\\MLzoomcamp_dataengineer2023\\Homework\\W3\\data\\New folder\\New folder\\yellow_tripdata_2019-07.csv.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\B\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3457: DtypeWarning: Columns (6) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D:\\Avalon_Pratice_Code\\ML_Project\\Dataclub\\MLzoomcamp_dataengineer2023\\Homework\\W3\\data\\New folder\\New folder\\yellow_tripdata_2019-08.csv.gz\n",
+      "D:\\Avalon_Pratice_Code\\ML_Project\\Dataclub\\MLzoomcamp_dataengineer2023\\Homework\\W3\\data\\New folder\\New folder\\yellow_tripdata_2019-09.csv.gz\n",
+      "D:\\Avalon_Pratice_Code\\ML_Project\\Dataclub\\MLzoomcamp_dataengineer2023\\Homework\\W3\\data\\New folder\\New folder\\yellow_tripdata_2019-10.csv.gz\n",
+      "D:\\Avalon_Pratice_Code\\ML_Project\\Dataclub\\MLzoomcamp_dataengineer2023\\Homework\\W3\\data\\New folder\\New folder\\yellow_tripdata_2019-11.csv.gz\n",
+      "D:\\Avalon_Pratice_Code\\ML_Project\\Dataclub\\MLzoomcamp_dataengineer2023\\Homework\\W3\\data\\New folder\\New folder\\yellow_tripdata_2019-12.csv.gz\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_all = pd.DataFrame()\n",
+    "for i in file_list[12:18]:\n",
+    "    print(i)\n",
+    "    file_all = file_all.append(pd.read_csv(i))\n",
+    "file_all.to_parquet('yellow_tripdata_3.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_all.to_parquet('yellow_tripdata_2.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
